dont send empty fix overflow messages

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -59,6 +59,7 @@ textarea {
 
 .chat-message-text p {
     font-size: 16px;
+    width: 100%;
     word-wrap: break-word;
 }
 
@@ -69,6 +70,8 @@ textarea {
     background: #608dff;
     box-shadow: 0 0 3px rgb(0 0 0 / 40%);
     margin-left: 5px;
+    width: 100%;
+    text-align: right;
 }
 
 .chat-answer {
